@@ -16,6 +16,7 @@ Depends: R (>= 3.6.0)
 Imports:
     alphahull,
 	dplyr,
+	exactextractr,
 	fasterize,
     sp,
 	sf,
@@ -34,8 +35,7 @@ Imports:
 	mgcv,
 	EnvStats,
 	maptools,
-    methods,
-	velox
+    methods
 Maintainer: Jeffrey S. Evans <jeffrey_evans@tnc.org>
 License: GPL-3
 URL: https://github.com/jeffreyevans/spatialEco
