@@ -135,7 +135,6 @@ exportClasses(effect.size)
 exportClasses(loess.boot)
 import(raster)
 import(sf)
-import(velox)
 importFrom(methods,as)
 importFrom(methods,slot)
 useDynLib(spatialEco,Dist)
