@@ -150,5 +150,6 @@ spatialEco_1.3-0
 
 spatialEco_1.3-1
 =================
+* Due to depreciation, changed velox dependency to exactextractr for raster extraction
 * Added function "libraries" for checking install, installing and adding packages to namespace environment
 
